--- a/src/main/webapp/WEB-INF/templates/searchProducts.html
+++ b/src/main/webapp/WEB-INF/templates/searchProducts.html
@@ -11,8 +11,8 @@
 
 <body>
 
-<div class="topnav">
-    <p>Link veloci</p>
+<div class="styled-quick-links">
+    <p>Quick links</p>
     <a th:href="@{/home}">Home</a>
     <a th:href="@{/shoppingCart}">Shopping cart</a>
     <a th:href="@{/orders}">My Orders</a>
