--- a/src/main/webapp/WEB-INF/templates/shoppingCart.html
+++ b/src/main/webapp/WEB-INF/templates/shoppingCart.html
@@ -13,8 +13,8 @@
 <body>
 
 
-<div class="topnav">
-  <p>Link veloci</p>
+<div class="styled-quick-links">
+  <p>Quick links</p>
   <a th:href="@{/home}">Home</a>
   <a th:href="@{/shoppingCart}">Shopping cart</a>
   <a th:href="@{/orders}">My Orders</a>
