--- a/src/main/webapp/WEB-INF/templates/searchProducts.html
+++ b/src/main/webapp/WEB-INF/templates/searchProducts.html
@@ -24,7 +24,7 @@
         <caption>Products from the marketplace</caption>
         <thead>
             <tr>
-                <th scope="col">Product</th>
+                <th colspan="2" scope="col">Product</th>
                 <th scope="col">Description</th>
                 <th scope="col">Cost</th>
                 <th scope="col">Supplier</th>
@@ -34,6 +34,9 @@
 
         <tbody>
             <tr th:each="productId : ${products.supplierProductMultiMap.keySet()}" th:with="productInfo1=${products.supplierProductMultiMap.get(productId)[0]}">
+                <td class="table-image">
+                    <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/products/'+ ${productInfo1.productImagePath}" alt="Product image"/>
+                </td>
                 <td>
                     <!-- form reso cliccabile e modificato con css -->
                     <form th:action=" ${#request.contextPath} + '/search/products/showProductInfo' " class="inline" method="POST" >
