--- a/src/main/webapp/css/myStyle.css
+++ b/src/main/webapp/css/myStyle.css
@@ -50,14 +50,14 @@ html {
 }
 
 .styled-form-button {
-    float: left;
-    padding-left: 20px;
+    padding-left: 40px;
     display: block;
 }
 
 .styled-form-button p, input {
     width: auto;
     font-family: formula1display-regular, serif;
+    padding-left: inherit;
 }
 
 
@@ -165,6 +165,20 @@ html {
 }
 
 .bold_info span {
-    font-family: formula1display-bold, Serif;
+    font-family: formula1display-bold, serif;
     font-size: 20px;
+}
+
+
+.table-image img {
+    width:304px;
+    height:228px;
+    object-fit: contain;
+    border: 1px solid #ddd;
+    border-radius: 20px;
+    padding: 5px;
+}
+
+.table-image img:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
