--- a/src/main/webapp/WEB-INF/templates/home.html
+++ b/src/main/webapp/WEB-INF/templates/home.html
@@ -13,16 +13,27 @@
 
 <body>
 
-<h1>Welcome to our marketplace <span th:text="${session.user.userName}">Amadeus</span></h1>
+<header>
+    <div>
+
+        <a th:href="@{/TIW/home}" class="logo">
+            <img src="https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/suppliers/amazon-logo.png" alt="amazon-logo.png"/>
+        </a>
+
+        <div class="header-right">
+            <a th:href="@{/home}" class="active">Home</a>
+            <a th:href="@{/shoppingCart}">Shopping cart</a>
+            <a th:href="@{/orders}">My Orders</a>
+            <a th:href="@{/logout}">Logout</a>
+        </div>
+
+    </div>
+</header>
+
+<!-- <h1>Welcome to our marketplace <span th:text="${session.user.userName}">Amadeus</span></h1> -->
 
 <!-- Quick links-->
-<div class="styled-quick-links">
-  <p>Quick links</p>
-  <a th:href="@{/home}">Home</a>
-  <a th:href="@{/shoppingCart}">Shopping cart</a>
-  <a th:href="@{/orders}">My Orders</a>
-  <a th:href="@{/logout}">Logout</a>
-</div>
+
 
 
 <!-- Search form-->
@@ -44,14 +55,14 @@
             <th colspan="2" scope="col">Product</th>
             <th scope="col">Description</th>
             <th scope="col">Cost</th>
-            <th scope="col">Supplier</th>
+            <th colspan="2" scope="col">Supplier</th>
             <th scope="col">Add to cart</th>
         </tr>
         </thead>
 
         <tbody>
         <tr th:each="productId : ${products.supplierProductMultiMap.keySet()}" th:with="productInfo1=${products.supplierProductMultiMap.get(productId)[0]}">
-            <td class="table-image">
+            <td th:class="table-product-img">
                 <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/products/'+ ${productInfo1.productImagePath}" alt="Product image"/>
             </td>
             <td>
@@ -59,7 +70,7 @@
                 <form th:action=" ${#request.contextPath} + '/home' " method="POST" >
                     <!-- il tag input vine utilizzato per mandare parametri nella richiesta -->
                     <input type="hidden" name="productId" th:value="${productId}" value="Id prodotto">
-                    <input type="submit" name="productName" th:value="${productInfo1.productName}" value="Nome prodotto" class="link-button">
+                    <input type="submit" name="productName" th:value="${productInfo1.productName}" value="Nome prodotto" th:class="link-button">
                     <!-- il tag button può essere utilizzato per inserire STATICAMENTE il testo del link -->
                     <!-- <button type="submit" class="link-button"> Testo del link</button> -->
                     <!-- inserire più 'type=submit' fa comparire più bottoni -->
@@ -67,6 +78,9 @@
             </td>
             <td th:text="${productInfo1.productDescription}"></td>
             <td th:text="${productInfo1.supplierProductCost}"></td>  <!-- if product.isOnDiscount 'illimuna prezzo' -->
+            <td class="table-supplier-img">
+                <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/suppliers/'+ ${productInfo1.supplier.imagePath}" alt="Product image"/>
+            </td>
             <td th:text="${productInfo1.supplierName}"></td>
             <td>
                 <form th:action="${#request.contextPath} + '/products/AddToCart'"  th:object="${productInfo1}" method="POST">
