Guava Multimap replaced with simple Map

--- a/src/main/webapp/WEB-INF/templates/home.html
+++ b/src/main/webapp/WEB-INF/templates/home.html
@@ -16,7 +16,7 @@
 <header>
     <div>
 
-        <a th:href="@{/TIW/home}" class="logo">
+        <a th:href="@{/home}" class="logo">
             <img src="https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/suppliers/amazon-logo.png" alt="amazon-logo.png"/>
         </a>
 
@@ -61,7 +61,7 @@
         </thead>
 
         <tbody>
-        <tr th:each="productId : ${products.supplierProductMultiMap.keySet()}" th:with="productInfo1=${products.supplierProductMultiMap.get(productId)[0]}">
+        <tr th:each="productId : ${products.supplierProductMap.keySet()}" th:with="productInfo1=${products.supplierProductMap.get(productId)[0]}">
             <td th:class="table-product-img">
                 <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/products/'+ ${productInfo1.productImagePath}" alt="Product image"/>
             </td>
@@ -94,7 +94,7 @@
             <!--    Questa entry della tabela contine tutte le informazioni sui venditori di tale prodotto
                     che si è deciso di non mostrare per rendere più fluida l'esperienza utente almeno nella home
             <td>
-                <table th:each="supplier : ${products.supplierProductMultiMap.get(productId)}">
+                <table th:each="supplier : ${products.supplierProductMap.get(productId)}">
                     <caption>Suppliers</caption>
                     <thead>
                     <tr>
