--- a/src/main/webapp/WEB-INF/templates/orders.html
+++ b/src/main/webapp/WEB-INF/templates/orders.html
@@ -16,7 +16,7 @@
 <header>
   <div>
 
-    <a th:href="@{/TIW/home}" class="logo">
+    <a th:href="@{/home}" class="logo">
       <img src="https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/suppliers/amazon-logo.png" alt="amazon-logo.png"/>
     </a>
 
